Log4j & aspects(AOP)